ingress-test/alert-manager-ingress.yaml
---
# Source: prometheus/templates/alertmanager/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.org/client-max-body-size: 256m
  labels:
    component: 'alertmanager'
    app: prometheus
    release: prometheus
    chart: prometheus-15.4.0
    heritage: Helm
  name: prometheus-alertmanager
  namespace: prometheus
spec:
  tls:
    - hosts:
        - alertmanager.htts-corp.dev
      secretName: alertmanager-tls
  rules:
    - host: alertmanager.htts-corp.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-kube-prometheus-alertmanager
                port:
                  number: 80
