ingress-test/grafana-ingress.yaml
---
# Source: prometheus/templates/alertmanager/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.org/client-max-body-size: 256m
  labels:
    component: 'grafana'
    name: grafana
    instance: prometheus
    chart: grafana-6.21.5
    managed-by: Helm
  name: prometheus-grafana
  namespace: prometheus
spec:
  tls:
    - hosts:
        - grafana.htts-corp.dev
      secretName: grafana-tls
  rules:
    - host: grafana.htts-corp.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 80
